fix some alignment.

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ nav p {
     justify-content: center;
     border: 3px solid #BE123C;
     border-radius: var(--radius);
-    padding: 6px 10px;
+    padding: 0px 10px;
     /* width: max-content; */
 }
 
@@ -228,12 +228,16 @@ nav p {
 }
 
 .li-image {
-    max-width: 100px;
+    width: 100%;
+}
+
+.inside-li {
+    width: 100%;
 }
 
 .li-img {
     object-fit: cover;
-    max-width: 200px;
+    max-width: 260px;
 }
 
 @media screen and (max-width:840px) {
